[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/rogue spritesheet calciumtrice.png" type="Texture" id=2]
[ext_resource path="res://GameContent/QuickScenes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameContent/GameObjects/earlySwordHitBox.gd" type="Script" id=4]
[ext_resource path="res://GameContent/GameObjects/UI/UserInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.gd" type="Script" id=6]
[ext_resource path="res://GameContent/GameObjects/Enemy/Stats/PlayerStats1.tres" type="Resource" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.77
height = 30.6729

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Rogue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34, 35, 36, 37, 38, 39, 40 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.15, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Rogue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47, 48, 49 ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rogue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Rogue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.31771
height = 11.7748

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.00731
height = 9.72402

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 0.8, 0.8 )
collision_layer = 7
collision_mask = 7
script = ExtResource( 6 )
starting_stats = ExtResource( 7 )

[node name="UI" type="Node2D" parent="."]
z_index = 99

[node name="Control" parent="UI" instance=ExtResource( 5 )]
visible = false
margin_left = -163.102
margin_top = -81.7074
margin_right = -163.102
margin_bottom = -81.7074

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Rogue" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 10
hframes = 10
frame = 42

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 0.5, 0.3 )
shape = SubResource( 1 )

[node name="RogueAnimation" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 6.0
}

[node name="AttackHitbox" parent="Position2D" instance=ExtResource( 3 )]
collision_mask = 2147483649
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="Position2D/AttackHitbox" index="0"]
position = Vector2( 12.6675, 0 )
rotation = 1.5708
shape = SubResource( 6 )
disabled = true

[node name="PlayerHitBox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="HitBoxPoly" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2( 0.147467, 1.4748 )
shape = SubResource( 7 )
[connection signal="area_entered" from="PlayerHitBox" to="." method="_on_PlayerHitBox_area_entered"]

[editable path="UI/Control"]

[editable path="UI/Control/Strength"]

[editable path="Position2D/AttackHitbox"]
